--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-watch",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "clear the console and run flow on file changes",
   "main": "src/flow-watch.js",
   "bin": {
